--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ after_script:
   - npm run coveralls
 env:
   global:
-    secure: "AOs4Fe7K+EbqVgo5GsNbpLavyXtVOlFpoK4LoWhgKI5+hATS8gTWtnqfEbPtJGRkg6FKywtYeEAAN3lUCEv0uS/6i/0WgjUi5pHhvHISNdRvtfsHvAOriytKwaTY2PX5cKEd6sOtFO1wbl2CguTHz1aWFBg9oEOaKMoqZCv/sTo="
-    secure: "SkTuv1gzf9CzEKwxCBM5KuIquWT3xg19zgTeO9mSbMYKub4/VzpYDIX/EPpfbI91C3V3IlKMHrKY9gA2tCnSOepL2QVQf0ePIJZX0ttL7oia6KsV6OZfmVCetpxnSsOT0WVmwu2HpsTy9F/aCAZVHykzn1kwF24ombywLbU3YLQ="
+    secure: 'NxlOOTAtd6NjVEvZ4f80U61LOERS9esczm/cuIQNkMfX6WvQTiwlJ7G2IuBc269I2GBWSaMdc2NzLj/zOMZSUodQzq27CpfcDULV4J3s8Vqj9T8c7XMLaZiTV3bFpKlnsa2y5o0/cuZaYCMKvZbOeFTqJEZhw860ki6fP0b+Has='
+    secure: 'VXVABCsYRzvSLxJY19dPvMKYQljFtqhxxKCiEs1721zzPtPRxKbryIbt3nRRyozpqrYN8eunBhfoRRZWDqaSyYSZK/tXkzKyDS1IHO3pJR7Sjcun+OXwn6Wvzyd8n7SB3/dIBJiT67oD55DApPQaxBfv6OQFY5GgifWY9/FFwIw='
