test/implement ability to turn reports donatable

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "passport":        "*",
     "passport-facebook": "*",
     "gravatar":          "*",
-    "stripe":            "*"
+    "stripe":            "*",
+    "dropzone":          "*"
   },
   "devDependencies": {
     "grunt":                "*",
